// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-toolbar should render with _label="Label horizontal" _items=[{"type":"button","_label":"Button"},{"type":"link","_href":"#","_label":"Link"}] 1`] = `
<kol-toolbar>
  <template shadowrootmode="open">
    <div aria-label="Label horizontal" class="kol-toolbar kol-toolbar--orientation-horizontal" role="toolbar">
      <div class="button kol-button kol-button--normal kol-button--standalone kol-toolbar__item normal">
        <button class="kol-button__button" type="button">
          <span class="kol-button__text kol-span">
            <span class="kol-span__container">
              <span class="kol-span__label">
                Button
              </span>
              <span aria-hidden="true" class="kol-span__slot" hidden="">
                <slot name="expert" slot="expert"></slot>
              </span>
            </span>
          </span>
        </button>
      </div>
      <div class="button kol-link kol-link--inline kol-toolbar__item normal">
        <a class="kol-link__anchor" href="#" tabindex="-1">
          <span class="kol-link__text kol-span">
            <span class="kol-span__container">
              <span class="kol-span__label">
                Link
              </span>
              <span aria-hidden="true" class="kol-span__slot" hidden="">
                <slot name="expert" slot="expert"></slot>
              </span>
            </span>
          </span>
        </a>
      </div>
    </div>
  </template>
</kol-toolbar>
`;

exports[`kol-toolbar should render with _label="Label vertical" _items=[{"type":"button","_label":"Button"},{"type":"link","_href":"#","_label":"Link"}] _orientation="vertical" 1`] = `
<kol-toolbar>
  <template shadowrootmode="open">
    <div aria-label="Label vertical" class="kol-toolbar kol-toolbar--orientation-vertical" role="toolbar">
      <div class="button kol-button kol-button--normal kol-button--standalone kol-toolbar__item normal">
        <button class="kol-button__button" type="button">
          <span class="kol-button__text kol-span">
            <span class="kol-span__container">
              <span class="kol-span__label">
                Button
              </span>
              <span aria-hidden="true" class="kol-span__slot" hidden="">
                <slot name="expert" slot="expert"></slot>
              </span>
            </span>
          </span>
        </button>
      </div>
      <div class="button kol-link kol-link--inline kol-toolbar__item normal">
        <a class="kol-link__anchor" href="#" tabindex="-1">
          <span class="kol-link__text kol-span">
            <span class="kol-span__container">
              <span class="kol-span__label">
                Link
              </span>
              <span aria-hidden="true" class="kol-span__slot" hidden="">
                <slot name="expert" slot="expert"></slot>
              </span>
            </span>
          </span>
        </a>
      </div>
    </div>
  </template>
</kol-toolbar>
`;
